--- a/regatasnyc.html
+++ b/regatasnyc.html
@@ -17,7 +17,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 primaryForm">
-				<h1>Inscscripcion de Regata</h1>
+				<h1>Inscripcion de Regata</h1>
 				<form>
 					<div class="form-group">
 						<label for="clase">Clase</label>
